hphp/test/zend/good/zend/inter_007.php
<?php

interface d {
	static function B();	
}

interface c {
	function b();	
}

class_alias('c', 'w');

interface a extends d, w { }

?>