hphp/test/zend/bad/zend/magic_methods_006.php
<?php

interface a {
	function __callstatic($a, $b);
}

?>